--- a/index.html
+++ b/index.html
@@ -8,16 +8,43 @@
     <title>Phoenix - Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="/background.css">
     <link rel="stylesheet" href="/shared.css">
     <link rel="stylesheet" href="/style.css">
-
 </head>
 
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+    <script>
+        var numberOfDots = 500;
+        var body = document.querySelector('body');
+
+        for (var i = 0; i < numberOfDots; i++) {
+            var dot = document.createElement('div');
+            dot.classList.add('dot');
+            dot.style.top = Math.random() * 100 + '%';
+            dot.style.left = Math.random() * 100 + '%';
+            dot.style.animation = 'dotAnimation ' + (Math.random() * 3 + 1) + 's infinite'; // Random animation duration between 1 and 4 seconds
+            dot.style.animationDelay = Math.random() * 2 + 's'; // Random delay between 0 and 2 seconds
+
+            // Add hover effect
+            dot.addEventListener('mouseenter', function () {
+                this.style.transform = 'scale(1.5)';
+            });
+
+            dot.addEventListener('mouseleave', function () {
+                this.style.transform = 'scale(1)';
+            });
+
+            body.appendChild(dot);
+        }
+    </script>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg  ">
             <div class="container">
-                <a class="navbar-brand" href="#">Phoenix</a>
+                <a class="navbar-brand text-light" href="#">Phoenix</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -25,13 +52,13 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link text-light" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Features</a>
+                            <a class="nav-link text-light" href="#">Features</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
+                            <a class="nav-link text-light" href="#">Pricing</a>
                         </li>
 
                     </ul>
@@ -44,6 +71,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
+
+
+
 </body>
 
 </html>
