--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
+                    <ul class="navbar-nav ">
+                        <li class="nav-item mx-4">
                             <a class="nav-link text-light" aria-current="page" href="#">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" href="#">Features</a>
+                        <li class="nav-item mx-4">
+                            <a class="nav-link text-light" href="#">Contact Us</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" href="#">Pricing</a>
+                        <li class="nav-item mx-4">
+                            <a class="nav-link text-light" href="#">FAQ</a>
                         </li>
 
                     </ul>
