--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phoenix - Home</title>
+    <link rel="icon" type="image/x-icon" href="/images/20230509_172944.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Instrument+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="/background.css">
     <link rel="stylesheet" href="/shared.css">
     <link rel="stylesheet" href="/style.css">
@@ -50,8 +56,8 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                    <ul class="navbar-nav ">
-                        <li class="nav-item mx-4">
+                    <ul class="navbar-nav mt-1">
+                        <li class="nav-item me-4">
                             <a class="nav-link text-light" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item mx-4">
@@ -60,7 +66,11 @@
                         <li class="nav-item mx-4">
                             <a class="nav-link text-light" href="#">FAQ</a>
                         </li>
-
+                        <li class="nav-item ms-4 pt-2">
+                            <a class="nav-link text-light " href="#"><span class="material-symbols-outlined">
+                                    account_circle
+                                </span></a>
+                        </li>
                     </ul>
                 </div>
             </div>
