--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Instrument+Sans&display=swap" rel="stylesheet">
+
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="/background.css">
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
@@ -76,12 +77,35 @@
             </div>
         </nav>
     </header>
+    <main>
+        <div class="container">
+            <section>
+                <div class="col-lg-6 col-sm-8 col-md-8 text-left edit-section-one">
+                    <h1 class="edit-h1-setion-one">
+                        Building a bright future for your <span class=" word line-1 anim-typewriter"></span>
+                    </h1>
+
+                    <p class="pb-2 edit-p-section-one">
+                        We help you drive growth through our experienced & trustworthy consultants.
+                    </p>
+                    <button onclick="location.href='./index7.html'" type="button" class="btn btn-outline-light ph-2"
+                        id="edit9">
+                        Find a Consultant →
+                    </button>
+
+
+                </div>
+            </section>
+            <section></section>
+
+        </div>
+    </main>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
-
+    <script src="/script.js"></script>
 
 
 </body>
