changed the background color

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                     <p class="pb-2 edit-p-section-one">
                         We help you drive growth through our experienced & trustworthy consultants.
                     </p>
-                    <button onclick="location.href='./index7.html'" type="button" class="btn btn-outline-light ph-2"
-                        id="edit9">
+                    <button onclick="location.href=''" type="button" class="btn btn-outline-light ph-2"
+                        id="edit-button-section-one">
                         Find a Consultant →
                     </button>
 
