--- a/index.html
+++ b/index.html
@@ -24,30 +24,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
-    <script>
-        var numberOfDots = 500;
-        var body = document.querySelector('body');
 
-        for (var i = 0; i < numberOfDots; i++) {
-            var dot = document.createElement('div');
-            dot.classList.add('dot');
-            dot.style.top = Math.random() * 100 + '%';
-            dot.style.left = Math.random() * 100 + '%';
-            dot.style.animation = 'dotAnimation ' + (Math.random() * 3 + 1) + 's infinite'; // Random animation duration between 1 and 4 seconds
-            dot.style.animationDelay = Math.random() * 2 + 's'; // Random delay between 0 and 2 seconds
 
-            // Add hover effect
-            dot.addEventListener('mouseenter', function () {
-                this.style.transform = 'scale(1.5)';
-            });
+    <div id="img-right"></div>
 
-            dot.addEventListener('mouseleave', function () {
-                this.style.transform = 'scale(1)';
-            });
-
-            body.appendChild(dot);
-        }
-    </script>
     <header>
         <nav class="navbar navbar-expand-lg  ">
             <div class="container">
@@ -79,7 +59,31 @@
     </header>
     <main>
         <div class="container">
-            <section>
+            <section id="first-section">
+                <script>
+                    var numberOfDots = 500;
+                    var body = document.querySelector('body');
+
+                    for (var i = 0; i < numberOfDots; i++) {
+                        var dot = document.createElement('div');
+                        dot.classList.add('dot');
+                        dot.style.top = Math.random() * 100 + '%';
+                        dot.style.left = Math.random() * 100 + '%';
+                        dot.style.animation = 'dotAnimation ' + (Math.random() * 3 + 1) + 's infinite'; // Random animation duration between 1 and 4 seconds
+                        dot.style.animationDelay = Math.random() * 2 + 's'; // Random delay between 0 and 2 seconds
+
+                        // Add hover effect
+                        dot.addEventListener('mouseenter', function () {
+                            this.style.transform = 'scale(1.5)';
+                        });
+
+                        dot.addEventListener('mouseleave', function () {
+                            this.style.transform = 'scale(1)';
+                        });
+
+                        body.appendChild(dot);
+                    }
+                </script>
                 <div class="col-lg-6 col-sm-8 col-md-8 text-left edit-section-one">
                     <h1 class="edit-h1-setion-one">
                         Building a bright future for your <span class=" word line-1 anim-typewriter"></span>
@@ -95,11 +99,18 @@
 
 
                 </div>
+
             </section>
-            <section></section>
+            <section>
+
+            </section>
+
+
 
         </div>
+
     </main>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
