--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <!-- <link rel="stylesheet" href="/background.css"> -->
+    <link rel="stylesheet" href="/background.css">
     <link rel="stylesheet" href="/shared.css">
     <link rel="stylesheet" href="/style.css">
 </head>
