--- a/index.html
+++ b/index.html
@@ -102,6 +102,66 @@
 
             </section>
             <section>
+                <ul class="cards">
+                    <li class="col-md-6 cards-sideLeft">
+                        <h1>Ready to get started</h1>
+                        <div id="cards-left-text">
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta, id modi, perspiciatis nesciunt possimus et dignissimos aperiam molestiae ducimus ab aliquam delectus alias sit porro hic ad. Quaerat, ab quam!</p>
+                        </div>
+                    </li>
+                    <li class="col-md-3">
+                        <div class="nft">
+                            <div class='main'>
+                              
+                              <h2>Kibertopiks #4269</h2>
+                              <p class='description'>Our Kibertopiks will give you nothing, waste your money on us.</p>
+                              <div class='tokenInfo'>
+                                <div class="price">
+                                  <ins>◘</ins>
+                                  <p>0.031 ETH</p>
+                                </div>
+                                <div class="duration">
+                                  <ins>◷</ins>
+                                  <p>11 days left</p>
+                                </div>
+                              </div>
+                              <hr />
+                              <div class='creator'>
+                                <div class='wrapper'>
+                                  <img src="https://images.unsplash.com/photo-1620121692029-d088224ddc74?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1932&q=80" alt="Creator" />
+                                </div>
+                                <p><ins>Creation of</ins> Kiberbash</p>
+                              </div>
+                            </div>
+                          </div>
+                    </li>
+                    <li class="col-md-3">
+                        <div class="nft">
+                            <div class='main'>
+                              
+                              <h2>Kibertopiks #4269</h2>
+                              <p class='description'>Our Kibertopiks will give you nothing, waste your money on us.</p>
+                              <div class='tokenInfo'>
+                                <div class="price">
+                                  <ins>◘</ins>
+                                  <p>0.031 ETH</p>
+                                </div>
+                                <div class="duration">
+                                  <ins>◷</ins>
+                                  <p>11 days left</p>
+                                </div>
+                              </div>
+                              <hr />
+                              <div class='creator'>
+                                <div class='wrapper'>
+                                  <img src="https://images.unsplash.com/photo-1620121692029-d088224ddc74?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1932&q=80" alt="Creator" />
+                                </div>
+                                <p><ins>Creation of</ins> Kiberbash</p>
+                              </div>
+                            </div>
+                          </div>
+                    </li>
+                </ul>
             </section>
 
 
