--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         body.appendChild(dot);
                     }
                 </script>
-                <div class="col-lg-6 col-sm-8 col-md-8 text-left edit-section-one">
+                <div class="col-10 text-center edit-section-one">
                     <h1 class="edit-h1-setion-one">
                         Building a bright future for your <span class=" word line-1 anim-typewriter"></span>
                     </h1>
@@ -94,7 +94,7 @@
                     </p>
                     <button onclick="location.href=''" type="button" class="btn btn-outline-light ph-2"
                         id="edit-button-section-one">
-                        Find a Consultant →
+                        <span>Our Servces</span>
                     </button>
 
 
