Edited the button in the first section

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     </p>
                     <button onclick="location.href=''" type="button" class="btn btn-outline-light ph-2"
                         id="edit-button-section-one">
-                        <span>Our Servces</span>
+                        <span>Our Services</span>
                     </button>
 
 
