the second time editing the button of the first section

--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                     <p class="pb-2 edit-p-section-one">
                         We help you drive growth through our experienced & trustworthy consultants.
                     </p>
-                    <button onclick="location.href=''" type="button" class="btn btn-outline-light ph-2"
-                        id="edit-button-section-one">
-                        <span>Our Services</span>
+                    <button onclick="location.href=''" type="button" class="btn btn-outline-light ph-2" id="edit-button-section-one">
+                        <span class="button-text">Our Services</span>
+                        <img class="arrow-img" src="/images/arrow.png" alt="">
                     </button>
 
 
