added the cards structre

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- https://github.com/Ali-Mezher/Phoenix -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -102,67 +102,179 @@
             </div>
         </section>
             <section id="second-section">
-                <div class="container">
-                    <ul class="cards">
-                        <li class="col-6 cards-sideLeft">
-                            <h1>Ready to get started</h1>
-                            <div id="cards-left-text">
-                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta, id modi, perspiciatis nesciunt possimus et dignissimos aperiam molestiae ducimus ab aliquam delectus alias sit porro hic ad. Quaerat, ab quam!</p>
-                            </div>
-                        </li>
-                        <li class="col-3">
-                            <div class="nft">
-                                <div class='main'>
-                                  
-                                  <h2>Kibertopiks #4269</h2>
-                                  <p class='description'>Our Kibertopiks will give you nothing, waste your money on us.</p>
-                                  <div class='tokenInfo'>
-                                    <div class="price">
-                                      <ins>◘</ins>
-                                      <p>0.031 ETH</p>
-                                    </div>
-                                    <div class="duration">
-                                      <ins>◷</ins>
-                                      <p>11 days left</p>
-                                    </div>
-                                  </div>
-                                  <hr />
-                                  <div class='creator'>
-                                    <div class='wrapper'>
-                                      <img src="https://images.unsplash.com/photo-1620121692029-d088224ddc74?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1932&q=80" alt="Creator" />
-                                    </div>
-                                    <p><ins>Creation of</ins> Kiberbash</p>
-                                  </div>
-                                </div>
-                              </div>
-                        </li>
-                        <li class="col-3">
-                            <div class="nft">
-                                <div class='main'>
-                                  
-                                  <h2>Kibertopiks #4269</h2>
-                                  <p class='description'>Our Kibertopiks will give you nothing, waste your money on us.</p>
-                                  <div class='tokenInfo'>
-                                    <div class="price">
-                                      <ins>◘</ins>
-                                      <p>0.031 ETH</p>
-                                    </div>
-                                    <div class="duration">
-                                      <ins>◷</ins>
-                                      <p>11 days left</p>
-                                    </div>
-                                  </div>
-                                  <hr />
-                                  <div class='creator'>
-                                    <div class='wrapper'>
-                                      <img src="https://images.unsplash.com/photo-1620121692029-d088224ddc74?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1932&q=80" alt="Creator" />
-                                    </div>
-                                    <p><ins>Creation of</ins> Kiberbash</p>
-                                  </div>
-                                </div>
-                              </div>
-                        </li>
-                    </ul>
+                <div class="container grid">
+                    <!-- cards -->
+                    <!--==================== CARD 1 ====================-->
+            <article class="card__content grid">
+                <div class="card__pricing">
+                    <div class="card__pricing-number">
+                        <span class="card__pricing-symbol">$</span>0
+                    </div>
+                    <span class="card__pricing-month">/month</span>
+                </div>
+
+                <header class="card__header">
+                    <div class="card__header-circle grid">
+                        <img src="assets/img/free-coin.png" alt="" class="card__header-img">
+                    </div>
+
+                    <span class="card__header-subtitle">Free plan</span>
+                    <h1 class="card__header-title">Basic</h1>
+                </header>
+
+                <ul class="card__list grid">
+                    <li class="card__list-item">
+                        <i class="uil uil-check card__list-icon"></i>
+                        <p class="card__list-description">3 user request</p>
+                    </li>
+                    <li class="card__list-item">
+                        <i class="uil uil-check card__list-icon"></i>
+                        <p class="card__list-description">10 downloads por day</p>
+                    </li>
+                    <li class="card__list-item">
+                        <i class="uil uil-check card__list-icon"></i>
+                        <p class="card__list-description">Daily content updates</p>
+                    </li>
+                    <li class="card__list-item">
+                        <i class="uil uil-check card__list-icon"></i>
+                        <p class="card__list-description">Fully editable files</p>
+                    </li>
+                </ul>
+
+                <button class="card__button">Choose this plan</button>
+            </article>
+
+            <!--==================== CARD 2 ====================-->
+            <article class="card__content grid">
+                <div class="card__pricing">
+                    <div class="card__pricing-number">
+                        <span class="card__pricing-symbol">$</span>19
+                    </div>
+                    <span class="card__pricing-month">/month</span>
+                </div>
+
+                <header class="card__header">
+                    <div class="card__header-circle grid">
+                        <img src="assets/img/pro-coin.png" alt="" class="card__header-img">
+                    </div>
+
+                    <span class="card__header-subtitle">Most popular</span>
+                    <h1 class="card__header-title">Professional</h1>
+                </header>
+
+                <ul class="card__list grid">
+                    <li class="card__list-item">
+                        <i class="uil uil-check card__list-icon"></i>
+                        <p class="card__list-description">100 user request</p>
+                    </li>
+                    <li class="card__list-item">
+                        <i class="uil uil-check card__list-icon"></i>
+                        <p class="card__list-description">Unlimited downloads</p>
+                    </li>
+                    <li class="card__list-item">
+                        <i class="uil uil-check card__list-icon"></i>
+                        <p class="card__list-description">Unlock all features from our site</p>
+                    </li>
+                    <li class="card__list-item">
+                        <i class="uil uil-check card__list-icon"></i>
+                        <p class="card__list-description">Daily content updates</p>
+                    </li>
+                    <li class="card__list-item">
+                        <i class="uil uil-check card__list-icon"></i>
+                        <p class="card__list-description">Fully editable files</p>
+                    </li>
+                </ul>
+
+                <button class="card__button">Choose this plan</button>
+            </article>
+
+            <!--==================== CARD 3 ====================-->
+            <article class="card__content grid">
+                <div class="card__pricing">
+                    <div class="card__pricing-number">
+                        <span class="card__pricing-symbol">$</span>29
+                    </div>
+                    <span class="card__pricing-month">/month</span>
+                </div>
+
+                <header class="card__header">
+                    <div class="card__header-circle grid">
+                        <img src="assets/img/enterprise-coin.png" alt="" class="card__header-img">
+                    </div>
+
+                    <span class="card__header-subtitle">For agencies</span>
+                    <h1 class="card__header-title">Enterprise</h1>
+                </header>
+
+                <ul class="card__list grid">
+                    <li class="card__list-item">
+                        <i class="uil uil-check card__list-icon"></i>
+                        <p class="card__list-description">Unlimited user request</p>
+                    </li>
+                    <li class="card__list-item">
+                        <i class="uil uil-check card__list-icon"></i>
+                        <p class="card__list-description">Unlimited downloads</p>
+                    </li>
+                    <li class="card__list-item">
+                        <i class="uil uil-check card__list-icon"></i>
+                        <p class="card__list-description">Unlock all features from our site</p>
+                    </li>
+                    <li class="card__list-item">
+                        <i class="uil uil-check card__list-icon"></i>
+                        <p class="card__list-description">Daily content updates</p>
+                    </li>
+                    <li class="card__list-item">
+                        <i class="uil uil-check card__list-icon"></i>
+                        <p class="card__list-description">Fully editable files</p>
+                    </li>
+                </ul>
+
+                <button class="card__button">Choose this plan</button>
+            </article>
+
+            <!--==================== CARD 4 ====================-->
+            <article class="card__content grid">
+                <div class="card__pricing">
+                    <div class="card__pricing-number">
+                        <span class="card__pricing-symbol">$</span>29
+                    </div>
+                    <span class="card__pricing-month">/month</span>
+                </div>
+
+                <header class="card__header">
+                    <div class="card__header-circle grid">
+                        <img src="assets/img/enterprise-coin.png" alt="" class="card__header-img">
+                    </div>
+
+                    <span class="card__header-subtitle">For agencies</span>
+                    <h1 class="card__header-title">Enterprise</h1>
+                </header>
+
+                <ul class="card__list grid">
+                    <li class="card__list-item">
+                        <i class="uil uil-check card__list-icon"></i>
+                        <p class="card__list-description">Unlimited user request</p>
+                    </li>
+                    <li class="card__list-item">
+                        <i class="uil uil-check card__list-icon"></i>
+                        <p class="card__list-description">Unlimited downloads</p>
+                    </li>
+                    <li class="card__list-item">
+                        <i class="uil uil-check card__list-icon"></i>
+                        <p class="card__list-description">Unlock all features from our site</p>
+                    </li>
+                    <li class="card__list-item">
+                        <i class="uil uil-check card__list-icon"></i>
+                        <p class="card__list-description">Daily content updates</p>
+                    </li>
+                    <li class="card__list-item">
+                        <i class="uil uil-check card__list-icon"></i>
+                        <p class="card__list-description">Fully editable files</p>
+                    </li>
+                </ul>
+
+                <button class="card__button">Choose this plan</button>
+            </article>
                 </div>
             </section>
 
