--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         crossorigin="anonymous"></script>
 
 
-    <!-- <div id="img-right"></div> -->
+    
     <script>
       var numberOfDots = 500;
       var body = document.querySelector('body');
@@ -78,7 +78,7 @@
             <li class="nav-item me-4">
                 <a class="nav-link text-light" aria-current="page" href="#">Home</a>
             </li>
-            <li class="nav-item mx-4">
+            <li class="nav-item ">
                 <a class="nav-link text-light" href="#">Contact Us</a>
             </li>
           </ul>
