--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     <header>
       
       <nav class="navbar navbar-expand-lg">
-        <div class="container d-flex ">
-          <ul class="justify-content-start">
+        <div class="container">
+          <!-- <ul class="justify-content-start">
             <li>
               <a class="navbar-brand" href="#">Phoenix</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -67,22 +67,25 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
             </li>
-          </ul>
-          <ul class="justify-content-center">
+          </ul> -->
+          <ul class="navUl">
             <li class="phoenix-logo">
               <a class="navbar-logo" href="#">
                 <img src="/images/phoenix.png" alt="" width="125" height="125">
               </a>
             </li>
+            <li>
+                <p class="phoenix-text">PHOENIX</p>
+            </li>
           </ul>
-          <ul class="justify-content-end d-flex " style="list-style: none;">
+          <!-- <ul class="justify-content-end d-flex " style="list-style: none;">
             <li class="nav-item me-4">
                 <a class="nav-link text-light" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item ">
                 <a class="nav-link text-light" href="#">Contact Us</a>
             </li>
-          </ul>
+          </ul> -->
         </div>
     </nav>
     </header>
