finished editing the first section

--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
                 
                 <div class="col-10 text-center edit-section-one">
                     <h1 class="edit-h1-setion-one">
-                        Building a bright future for your <span class=" word line-1 anim-typewriter"></span>
+                        RISE YOUR BUSINESS THROUGH <span style="color: #c81616; z-index: -1;">INSTAGRAM MARKETING</span> 
                     </h1>
 
                     <p class="pb-2 edit-p-section-one">
-                        We help you drive growth through our experienced & trustworthy consultants.
+                        <span style="color: #c81616; z-index: -1;">CHECK</span> the Services and order it through our instagram direct message
                     </p>
                     <button onclick="smoothScroll(document.getElementById('second-section'))" type="button" class="btn btn-outline-light ph-2 scrollButton" id="edit-button-section-one">
                         <span class="button-text">Our Services</span>
